# nba_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml
data-examples/: espn_single_game_example.json
src/: main.py  nba_api.py  nba_controllers.py  nba_models.py  nba_stats.py
src/nba_api/: __init__.py  main.py  scripts.py
src/nba_api/domain/: enums.py  parsers.py
src/nba_api/presentation/: app.py  state.py
src/nba_api/presentation/routes/: __init__.py  players.py  scoreboard.py
src/nba_api/services/: __init__.py  espn_client.py  http_client.py  nba_client.py  stats_client.py
src/nba_api/use_cases/: players.py  scoreboard.py
tests/domain/: test_parsers.py
tests/presentation/: test_app.py  test_routes.py  test_state.py
tests/services/: test_http_client.py  test_nba_client.py
tests/use_cases/: test_players.py  test_scoreboard.py
