[tool.poetry]
name = "nba-api"
version = "0.1.0"
description = ""
authors = ["YK"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
