[tool.poetry]
name = "nba-api"
version = "0.2.0"
description = ""
authors = ["YK"]
readme = "README.md"
packages = [{ include = "nba_api", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx-cache = "^0.13.0"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["I"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
strict = false
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
